--- a/FrontEnd/html/login.html
+++ b/FrontEnd/html/login.html
@@ -22,18 +22,27 @@
         </ul>
     </nav>
 </header>
-<form id="login-form">
-    <h2>Log In</h2>
-    <h3>E-mail</h3>
-    <input type="search" id="login-email">
-    <h3>Mot de passe</h3>
-    <input type="search" id="login-password">
-    <div>
-        <div id="loginFormMessage" style="background-color:red;display:none;"></div>
-    <button id="login-form-submit-button" class="search-btn">Se connecter</button>
-    <a>Mot de passe oublié</a>
-    </div>
-</form>
+<section id="login">
+    <form id="login-form">
+        <h2>Log In</h2>
+        <label>E-mail</label>
+        <input type="search" id="login-email">
+        <label>Mot de passe</label>
+        <input type="search" id="login-password">
+        <div class="login-end">
+            <div id="loginFormMessage"></div>
+            <button id="login-form-submit-button" class="search-btn">Se connecter</button>
+            <a>Mot de passe oublié</a>
+        </div>
+    </form>
+</section>
+<footer>
+    <nav>
+        <ul>
+            <li>Mentions Légales</li>
+        </ul>
+    </nav>
+</footer>
 <script src="../assets/js/login.js"></script>
 </body>
 </html>
