--- a/FrontEnd/html/index.html
+++ b/FrontEnd/html/index.html
@@ -19,9 +19,9 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li id="login-button">login</li>
+			<li><a href="index.html#portfolio">projets</a></li>
+			<li><a href="index.html#contact">contact</a></li>
+			<li><a href="login.html">login</a></li>
 			<li><img src="../assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -44,7 +44,7 @@
 			<a href="#edit-project" class="open-modal" id="edit-mode-btn"><i class="fa-solid fa-pen-to-square"></i>modifier</a>
 		</div>
 		<div class="filters" id="filters">
-			<input type="button" class="filters-btn" id="displayAll" value="Tout">
+			<input type="button" id="displayAll" class="filters-btn active" value="Tout">
 		</div>
 		<div class="gallery" id="gallery">
 		</div>
