--- a/FrontEnd/html/index.html
+++ b/FrontEnd/html/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
-<div id="edit-mode">
+<div id="edit-mode" style="display:none;">
 	<i class="fa-solid fa-pen-to-square"></i>Mode édition
 </div>
 <header>
