--- a/FrontEnd/html/login.html
+++ b/FrontEnd/html/login.html
@@ -26,9 +26,9 @@
     <form id="login-form">
         <h2>Log In</h2>
         <label>E-mail</label>
-        <input type="search" id="login-email">
+        <input type="text" id="login-email">
         <label>Mot de passe</label>
-        <input type="search" id="login-password">
+        <input type="password" id="login-password">
         <div class="login-end">
             <div id="loginFormMessage"></div>
             <button id="login-form-submit-button" class="search-btn">Se connecter</button>
